# bomberman

./: CMakeLists.txt  Makefile  bombe-hermann.vcxproj  bomberman.h  client.c  client.h  client_actions.c  client_actions.h  display.c  display.h  err.h  game.c  game.h  main.c  main.h  map.c  map.h  read_helper.c  read_helper.h  server.c  server.h  server_state.c  server_state.h  socket.h  thread.h
cmake/: FindSDL2.cmake
